RESOLVED FIXED118116
HTMLAudioElement doesn't have to know about isVideo function
https://bugs.webkit.org/show_bug.cgi?id=118116
Summary HTMLAudioElement doesn't have to know about isVideo function
Kangil Han
Reported 2013-06-26 23:45:22 PDT
HTMLAudioElement doesn't have to know about isVideo function
Attachments
Patch (2.01 KB, patch)
2013-06-27 00:06 PDT, Kangil Han
no flags
Kangil Han
Comment 1 2013-06-27 00:06:14 PDT
WebKit Commit Bot
Comment 2 2013-06-27 19:28:57 PDT
Comment on attachment 205567 [details] Patch Clearing flags on attachment: 205567 Committed r152150: <http://trac.webkit.org/changeset/152150>
WebKit Commit Bot
Comment 3 2013-06-27 19:28:59 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.