HTMLAudioElement doesn't have to know about isVideo function https://bugs.webkit.org/show_bug.cgi?id=118116

Reviewed by Eric Carlson.

Minor code cleanup to remove isVideo function from HTMLAudioElement.
We can use default function in HTMLMediaElement as hasVideo does.

* html/HTMLAudioElement.h:
* html/HTMLMediaElement.h:
(WebCore::HTMLMediaElement::isVideo):


Canonical link: https://commits.webkit.org/136207@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152150 268f45cc-cd09-0410-ab3c-d52691b4dbfc